Html,CSS&JS adding

--- a/style.css
+++ b/style.css
@@ -26,8 +26,6 @@ body {
     justify-content: center;
     align-items: center;
     gap: 1.5vmin;
-
-
 }
 
 .box {
@@ -45,7 +43,29 @@ body {
     padding: 1rem;
     font-size: 1.25rem;
     background-color: #191913;
-    color: #fff;
+    color: #ffffc7;
     border-radius: 1rem;
     border: none;
+}
+
+#new-btn {
+    padding: 1rem;
+    font-size: 1.25rem;
+    background-color: #191913;
+    color: #ffffc7;
+    border-radius: 1rem;
+    border: none;
+}
+
+#msg {
+    color: #ffffc7;
+    font-size: 8vmin;
+}
+
+.msg-container {
+    height: 30vmin;
+}
+
+.hide {
+    display: none;
 }
